change repo structure

--- a/AoC.ipynb
+++ b/AoC.ipynb
@@ -9,16 +9,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "inp = []\n",
     "\n",
-    "with open('input1.txt', 'r') as f:\n",
+    "with open('input_1.txt', 'r') as f:\n",
     "    for line in f:\n",
-    "        inp.append(int(line))\n",
-    "\n",
+    "        inp.append(int(line))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "910539\n",
+      "116724144\n"
+     ]
+    }
+   ],
+   "source": [
     "## PART I ##\n",
     "# two entries that sum up to 2020\n",
     "for i in range(len(inp) - 1):\n",
@@ -71,14 +87,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
     "\n",
     "inp = []\n",
     "\n",
-    "with open('input2.txt', 'r') as f:\n",
+    "with open('input_2.txt', 'r') as f:\n",
     "    for line in f:\n",
     "        inp.append(line)\n",
-    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
     "## PART I ##        \n",
     "# password contains between nr[1] and nr[2] char characters\n",
     "\n",
@@ -137,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +170,23 @@
     "\n",
     "with open('input_3.txt', 'r') as f:\n",
     "    for line in f:\n",
-    "        inp.append(line[:-1])\n",
+    "        inp.append(line[:-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29521920\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# slopes = [3, 1] # PART I   \n",
     "slopes = [[1,1], [3,1], [5, 1], [7, 1], [1, 2]] # PART II\n",
@@ -184,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,8 +235,23 @@
     "\n",
     "for i,_ in enumerate(inp):\n",
     "    inp[i] = inp[i].replace('\\n', ' ')\n",
-    "    \n",
-    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153\n"
+     ]
+    }
+   ],
+   "source": [
     "needed_fields = [ \"byr\", \"iyr\", \"eyr\", \"hgt\", \"hcl\", \"ecl\", \"pid\"]\n",
     "eye_clrs = [ \"amb\", \"blu\", \"brn\", \"gry\", \"grn\", \"hzl\", \"oth\"]\n",
     "a_f = set('abcdef0123456789')\n",
@@ -261,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,8 +325,23 @@
     "\n",
     "with open('input_5.txt', 'r') as f:\n",
     "    for line in f:\n",
-    "        inp.append(line[:-1])\n",
-    "\n",
+    "        inp.append(line[:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "569\n"
+     ]
+    }
+   ],
+   "source": [
     "seat_IDs = []\n",
     "\n",
     "for ticket in inp:\n",
@@ -312,7 +383,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('input_6.txt', 'r') as f:\n",
+    "    inp = f.read()\n",
+    "    inp = inp.split(\"\\n\\n\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -325,11 +407,6 @@
     }
    ],
    "source": [
-    "with open('input_6.txt', 'r') as f:\n",
-    "    inp = f.read()\n",
-    "    inp = inp.split(\"\\n\\n\") \n",
-    "    \n",
-    "\n",
     "## PART I ##\n",
     "\n",
     "ysum1 = 0\n",
@@ -372,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -455,6 +532,152 @@
     "print('Part 1 solution: ' + str(len(gold_climber('shiny gold', set()))))\n",
     "print('Part 2 solution: ' + str(gold_digger('shiny gold') - 1))\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp = defaultdict()\n",
+    "\n",
+    "with open ('input_8.txt', 'r') as f:\n",
+    "    for i, line in enumerate(f):\n",
+    "        inp[i] = (line[:-1].split()[0], int(line[:-1].split()[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_inptxt = 'nop +0\\n\\\n",
+    "acc +1\\n\\\n",
+    "jmp +4\\n\\\n",
+    "acc +3\\n\\\n",
+    "jmp -3\\n\\\n",
+    "acc -99\\n\\\n",
+    "acc +1\\n\\\n",
+    "nop -4\\n\\\n",
+    "acc +6'\n",
+    "\n",
+    "test_inp = defaultdict()\n",
+    "\n",
+    "for i, line in enumerate(test_inptxt.split('\\n')):\n",
+    "    test_inp[i] = (line.split()[0], int(line.split()[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1217\n"
+     ]
+    }
+   ],
+   "source": [
+    "## PART I ##\n",
+    "\n",
+    "instr_idx = set()\n",
+    "idx = 0\n",
+    "acc = 0\n",
+    "\n",
+    "while idx not in instr_idx:\n",
+    "    \n",
+    "    instr_idx.add(idx)\n",
+    "    \n",
+    "    if inp[idx][0] == 'acc':\n",
+    "        acc += inp[idx][1]\n",
+    "        idx += 1\n",
+    "    \n",
+    "    elif inp[idx][0] == 'jmp':\n",
+    "        idx += inp[idx][1]\n",
+    "    \n",
+    "    elif inp[idx][0] == 'nop':\n",
+    "        idx += 1\n",
+    "\n",
+    "print(acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "501\n"
+     ]
+    }
+   ],
+   "source": [
+    "## PART II ##\n",
+    "\n",
+    "def terminates(inp):\n",
+    "    \n",
+    "    instr_idx = set()\n",
+    "    idx = 0\n",
+    "    acc = 0\n",
+    "    \n",
+    "    while idx < len(inp.keys()):\n",
+    "    \n",
+    "        if idx in instr_idx:\n",
+    "            return False\n",
+    "        \n",
+    "        instr_idx.add(idx)\n",
+    "    \n",
+    "        if inp[idx][0] == 'acc':\n",
+    "            acc += inp[idx][1]\n",
+    "            idx += 1\n",
+    "    \n",
+    "        elif inp[idx][0] == 'jmp':\n",
+    "            idx += inp[idx][1]\n",
+    "    \n",
+    "        elif inp[idx][0] == 'nop':\n",
+    "            idx += 1\n",
+    "    \n",
+    "    \n",
+    "    print(acc)\n",
+    "    \n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "\n",
+    "copy_inp = inp.copy()\n",
+    "\n",
+    "for pos in inp:\n",
+    "    \n",
+    "    if inp[pos][0] == 'jmp':\n",
+    "        copy_inp[pos] = ('nop', inp[pos][1])\n",
+    "        \n",
+    "        if terminates(copy_inp):\n",
+    "            break\n",
+    "        else:\n",
+    "            copy_inp[pos] = ('jmp', inp[pos][1])\n",
+    "             \n",
+    "    if inp[pos][0] == 'nop':\n",
+    "        copy_inp[pos] = ('jmp', inp[pos][1])\n",
+    "        \n",
+    "        if terminates(copy_inp):\n",
+    "            break\n",
+    "        else:\n",
+    "            copy_inp[pos] = ('nop', inp[pos][1])"
    ]
   },
   {
