--- a/AoC.ipynb
+++ b/AoC.ipynb
@@ -9,20 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "inp = []\n",
     "\n",
     "with open('input_1.txt', 'r') as f:\n",
-    "    for line in f:\n",
-    "        inp.append(int(line))\n"
+    "    inp = [int(line) for line in f]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -45,8 +44,10 @@
     "    \n",
     "    if inp[i] < 2020:\n",
     "        for j in range(i + 1, len(inp)):\n",
+    "            \n",
     "            if inp[i] + inp[j] > 2020:\n",
     "                continue\n",
+    "                \n",
     "            if inp[i] + inp[j] == 2020:\n",
     "                print(inp[i] * inp[j])\n",
     "                break\n",
@@ -91,8 +92,7 @@
     "inp = []\n",
     "\n",
     "with open('input_2.txt', 'r') as f:\n",
-    "    for line in f:\n",
-    "        inp.append(line)\n",
+    "    inp =[line for line in f]\n",
     "        "
    ]
   },
@@ -162,20 +162,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "inp = []\n",
     "\n",
     "with open('input_3.txt', 'r') as f:\n",
-    "    for line in f:\n",
-    "        inp.append(line[:-1])\n"
+    "    inp = [line[:-1] for line in f]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -199,12 +198,9 @@
     "\n",
     "    new_rsize = rsize * right\n",
     " \n",
-    "    counter = 0\n",
     "    i = 0\n",
     "\n",
-    "    for j in range(0, new_rsize, right):\n",
-    "        if inp[i][j % csize] == '#':\n",
-    "            counter += 1\n",
+    "    counter = sum([1 for j in range(0, new_rsize, right) if inp[i][j % csize] == '#'])\n",
     "    \n",
     "    if i < rsize - down:\n",
     "        i += down\n",
@@ -225,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,14 +229,12 @@
     "    inp = f.read()\n",
     "    inp = inp.split(\"\\n\\n\")\n",
     "\n",
-    "for i,_ in enumerate(inp):\n",
-    "    inp[i] = inp[i].replace('\\n', ' ')\n",
-    "    "
+    "inp = [inp[i].replace('\\n', ' ') for i, _ in enumerate(inp)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -263,10 +257,8 @@
     "    check = 0\n",
     "    keys = []\n",
     "    \n",
-    "    for field in passport.split():\n",
-    "        keys += [field.split(':')[0]]\n",
-    "\n",
-    "      \n",
+    "    keys = [field.split(':')[0] for field in passport.split()]\n",
+    " \n",
     "    if all(field in keys for field in needed_fields):\n",
     "      \n",
     "        for entry in passport.split():\n",
@@ -317,20 +309,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "inp = []\n",
     "\n",
     "with open('input_5.txt', 'r') as f:\n",
-    "    for line in f:\n",
-    "        inp.append(line[:-1])"
+    "    inp = [line[:-1] for line in f]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -431,8 +422,7 @@
     "  \n",
     "    set_intersect = inp2[i][0]\n",
     "  \n",
-    "    for j, s in enumerate(inp2[i][1:]):\n",
-    "    \n",
+    "    for j in range(len(inp2[i][1:])):\n",
     "        set_intersect = set_intersect.intersection(inp2[i][j + 1])\n",
     "  \n",
     "    ysum2 += len(set_intersect)\n",
@@ -678,6 +668,99 @@
     "            break\n",
     "        else:\n",
     "            copy_inp[pos] = ('nop', inp[pos][1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 9\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp = []\n",
+    "\n",
+    "with open('input_9.txt', 'r') as f:\n",
+    "    inp = [int(line[:-1]) for line in f]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_inp = [35, 20, 15, 25, 47, 40, 62, 55, 65, 95, 102, 117, 150, 182, 127, 219, 299, 277, 309, 576]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "507622668\n"
+     ]
+    }
+   ],
+   "source": [
+    "window = 25\n",
+    "\n",
+    "def check_sum(lst, sm):\n",
+    "    \n",
+    "    for i in range(len(lst) - 1):\n",
+    "        for j in range(i + 1, len(lst)):\n",
+    "            \n",
+    "            if lst[i] + lst[j] == sm:\n",
+    "                return True\n",
+    "            \n",
+    "    return False\n",
+    "\n",
+    "for i in range(window, len(inp)):\n",
+    "    \n",
+    "    if not check_sum(inp[i - window : i], inp[i]):\n",
+    "        first_nr = inp[i]\n",
+    "        break\n",
+    "\n",
+    "print(first_nr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76688505\n"
+     ]
+    }
+   ],
+   "source": [
+    "window = 2\n",
+    "\n",
+    "while(window < len(inp)):\n",
+    "    \n",
+    "    for i in range(len(inp) - window):\n",
+    "        \n",
+    "        sm = sum(inp[i : i + window])\n",
+    "        \n",
+    "        if sm == first_nr:\n",
+    "            print(str(min(inp[i : i + window]) + max(inp[i : i + window])))\n",
+    "            window = len(inp)\n",
+    "            break\n",
+    "   \n",
+    "    window += 1"
    ]
   },
   {
