--- a/AoC.ipynb
+++ b/AoC.ipynb
@@ -764,11 +764,127 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 10\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[126, 38, 162, 123, 137, 97, 92, 67, 136, 37, 146, 2, 139, 74, 101, 163, 128, 127, 13, 111, 30, 117, 3, 93, 29, 152, 80, 21, 7, 54, 69, 40, 48, 104, 110, 142, 57, 116, 31, 70, 28, 151, 108, 20, 157, 121, 47, 75, 94, 39, 73, 77, 129, 41, 24, 44, 132, 87, 114, 58, 64, 4, 10, 19, 138, 45, 76, 147, 59, 155, 156, 83, 118, 109, 107, 160, 61, 91, 102, 115, 68, 150, 34, 16, 27, 135, 161, 46, 122, 90, 1, 164, 100, 103, 84, 145, 51, 60]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inp = []\n",
+    "\n",
+    "with open('input_10.txt', 'r') as f:\n",
+    "    inp = [int(line[:-1]) for line in f]\n",
+    "    \n",
+    "print(inp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "inp.sort()\n",
+    "inp.append(inp[-1] + 3)\n",
+    "inp.insert(0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65 34\n",
+      "2210\n"
+     ]
+    }
+   ],
+   "source": [
+    "## PART I ##\n",
+    "\n",
+    "dif1 = 0\n",
+    "dif3 = 0\n",
+    "\n",
+    "for i, jolt in enumerate(inp[:-1]):\n",
+    "    \n",
+    "    if jolt + 1 == inp[i + 1]:\n",
+    "        dif1 += 1\n",
+    "    if jolt + 3 == inp[i + 1]:\n",
+    "        dif3 += 1\n",
+    "        \n",
+    "print(str(dif1) + ' ' + str(dif3))\n",
+    "print(dif1 * dif3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 1, 1: 1, 2: 2, 3: 4, 4: 7, 7: 7, 10: 7, 13: 7, 16: 7, 19: 7, 20: 7, 21: 14, 24: 14, 27: 14, 28: 14, 29: 28, 30: 56, 31: 98, 34: 98, 37: 98, 38: 98, 39: 196, 40: 392, 41: 686, 44: 686, 45: 686, 46: 1372, 47: 2744, 48: 4802, 51: 4802, 54: 4802, 57: 4802, 58: 4802, 59: 9604, 60: 19208, 61: 33614, 64: 33614, 67: 33614, 68: 33614, 69: 67228, 70: 134456, 73: 134456, 74: 134456, 75: 268912, 76: 537824, 77: 941192, 80: 941192, 83: 941192, 84: 941192, 87: 941192, 90: 941192, 91: 941192, 92: 1882384, 93: 3764768, 94: 6588344, 97: 6588344, 100: 6588344, 101: 6588344, 102: 13176688, 103: 26353376, 104: 46118408, 107: 46118408, 108: 46118408, 109: 92236816, 110: 184473632, 111: 322828856, 114: 322828856, 115: 322828856, 116: 645657712, 117: 1291315424, 118: 2259801992, 121: 2259801992, 122: 2259801992, 123: 4519603984, 126: 4519603984, 127: 4519603984, 128: 9039207968, 129: 18078415936, 132: 18078415936, 135: 18078415936, 136: 18078415936, 137: 36156831872, 138: 72313663744, 139: 126548911552, 142: 126548911552, 145: 126548911552, 146: 126548911552, 147: 253097823104, 150: 253097823104, 151: 253097823104, 152: 506195646208, 155: 506195646208, 156: 506195646208, 157: 1012391292416, 160: 1012391292416, 161: 1012391292416, 162: 2024782584832, 163: 4049565169664, 164: 7086739046912, 167: 7086739046912}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## PART II ##\n",
+    "\n",
+    "nr_ways = dict()\n",
+    "\n",
+    "nr_ways[0] = 1\n",
+    "nr_ways[1] = 1\n",
+    "nr_ways[2] = 2\n",
+    "\n",
+    "def get_origins(jolt):\n",
+    "    \n",
+    "    reachable = [inp[inp.index(jolt) - 1]]\n",
+    "    \n",
+    "    if jolt - inp[inp.index(jolt) - 2] <= 3:\n",
+    "        reachable.append(inp[inp.index(jolt) - 2])\n",
+    "        \n",
+    "    if jolt - inp[inp.index(jolt) - 3] == 3:\n",
+    "        reachable.append(inp[inp.index(jolt) - 3])\n",
+    "    \n",
+    "    return reachable\n",
+    "\n",
+    "\n",
+    "\n",
+    "for jolt in inp[3:]:\n",
+    "    \n",
+    "    s = 0\n",
+    "    reachables = get_origins(jolt)\n",
+    "    \n",
+    "    for r in reachables:\n",
+    "        s += nr_ways[r]\n",
+    "        \n",
+    "    nr_ways[jolt] = s\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "print(nr_ways)"
+   ]
   }
  ],
  "metadata": {
