--- a/AoC.ipynb
+++ b/AoC.ipynb
@@ -885,6 +885,149 @@
     "    \n",
     "print(nr_ways)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open ('input_11.txt', 'r') as f:\n",
+    "    inp = [line[:-1] for line in f.readlines()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = 'L.LL.LL.LL\\n\\\n",
+    "LLLLLLL.LL\\n\\\n",
+    "L.L.L..L..\\n\\\n",
+    "LLLL.LL.LL\\n\\\n",
+    "L.LL.LL.LL\\n\\\n",
+    "L.LLLLL.LL\\n\\\n",
+    "..L.L.....\\n\\\n",
+    "LLLLLLLLLL\\n\\\n",
+    "L.LLLLLL.L\\n\\\n",
+    "L.LLLLL.LL'\n",
+    "\n",
+    "test_inp = []\n",
+    "for line in test.split('\\n'):\n",
+    "    test_inp.append(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seats = inp.copy()\n",
+    "seats_dict = dict()\n",
+    "\n",
+    "for i,row in enumerate(seats):\n",
+    "    for j,s in enumerate(row):\n",
+    "        seats_dict[(i, j)] = s\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## PART I ##\n",
+    "def get_immediate_neighbors(row, col, seats):\n",
+    "    \n",
+    "    return list(filter ( None, [seats.get((row - 1, col)), seats.get((row + 1, col)),\\\n",
+    "                               seats.get((row, col - 1)), seats.get((row, col + 1)), \\\n",
+    "                               seats.get((row - 1, col - 1)), seats.get((row - 1, col + 1)),\\\n",
+    "                               seats.get((row + 1, col - 1)), seats.get((row + 1, col + 1))]))\n",
+    "\n",
+    "\n",
+    "## PART II ##\n",
+    "def get_all_neighbors(row, col, seats):\n",
+    "    \n",
+    "    dirs = [(-1, -1), (-1, 0), (-1, 1), (0, -1), (0, 1), (1, -1), (1, 0), (1, 1)]\n",
+    "    neighbors = []\n",
+    "    \n",
+    "    for r, c in dirs:\n",
+    "        rnext = row + r\n",
+    "        cnext = col + c\n",
+    "        \n",
+    "        tile = seats.get((rnext, cnext))\n",
+    "        \n",
+    "        while tile == '.':\n",
+    "            rnext += r\n",
+    "            cnext += c\n",
+    "            tile = seats.get((rnext, cnext))\n",
+    "        \n",
+    "        neighbors.append(tile)    \n",
+    "        \n",
+    "    return(list(filter(None, neighbors)))\n",
+    "    \n",
+    "    \n",
+    "def change_state(seats, neighbor_fn):\n",
+    "    \n",
+    "    cp = seats.copy() \n",
+    "\n",
+    "    for row, col in cp:\n",
+    "        if cp[(row, col)] == 'L' and '#' not in neighbor_fn(row, col, seats):\n",
+    "            cp[(row, col)] = '#'\n",
+    "        else:\n",
+    "            if cp[(row, col)] == '#' and len([x for x in neighbor_fn(row, col, seats) if x == \"#\"]) >= 5: # 4 for part i\n",
+    "                cp[(row, col)] = 'L'\n",
+    "    \n",
+    "    if seats == cp:\n",
+    "        return False\n",
+    "    else:\n",
+    "        \n",
+    "        return cp\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2002\n"
+     ]
+    }
+   ],
+   "source": [
+    "seats = seats_dict.copy()\n",
+    "\n",
+    "while True:\n",
+    "    \n",
+    "    next_seats = change_state(seats, get_all_neighbors) #get_immediate_neighbors for part i\n",
+    "    \n",
+    "    if next_seats == False:\n",
+    "        print(len([x for x in seats.values() if x == '#']))\n",
+    "        break\n",
+    "        \n",
+    "    seats = next_seats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
