--- a/AoC.ipynb
+++ b/AoC.ipynb
@@ -1023,6 +1023,224 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cmath\n",
+    "\n",
+    "inp = []\n",
+    "\n",
+    "with open('input_12.txt', 'r') as f:\n",
+    "    \n",
+    "    for line in f:\n",
+    "        if line[0] == 'R':\n",
+    "            inp.append([line[0], - int(int(line[1:]) / 90)])\n",
+    "        elif line[0] == 'L':\n",
+    "            inp.append([line[0], int(int(line[1:]) / 90)])\n",
+    "        else:\n",
+    "            inp.append([line[0], int(line[1:])]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_txt = 'F10\\n\\\n",
+    "N3\\n\\\n",
+    "F7\\n\\\n",
+    "R90\\n\\\n",
+    "F11'\n",
+    "\n",
+    "test_inp = []\n",
+    "\n",
+    "for line in test_txt.split(\"\\n\"):\n",
+    "    if line[0] == 'R':\n",
+    "        test_inp.append([line[0], - int(int(line[1:]) / 90)])\n",
+    "    elif line[0] == 'L':\n",
+    "        test_inp.append([line[0], int(int(line[1:]) / 90)])\n",
+    "    else:\n",
+    "        test_inp.append([line[0], int(line[1:])])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2228\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "compass = {\"E\" : complex(1, 0), \"W\" : complex(-1, 0), \"N\" : complex(0, 1), \"S\" :complex(0, -1)}\n",
+    "\n",
+    "## PART I ##\n",
+    "\n",
+    "pos = complex(0, 0)\n",
+    "direction = complex(1, 0)\n",
+    "\n",
+    "for step, amount in inp:\n",
+    "    \n",
+    "    if step == \"R\" or step == \"L\":\n",
+    "        direction *= complex(0, 1) ** amount  \n",
+    "    elif step == \"F\":\n",
+    "        pos += amount * direction\n",
+    "    else:\n",
+    "        pos += amount * compass[step]\n",
+    "    \n",
+    "        \n",
+    "print(int(abs(pos.real) + abs(pos.imag)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42908\n"
+     ]
+    }
+   ],
+   "source": [
+    "## PART II ##\n",
+    "\n",
+    "pos = complex(0, 0)\n",
+    "wp = complex(10, 1)\n",
+    "\n",
+    "for step, amount in inp:\n",
+    "    \n",
+    "    if step == \"R\" or step == \"L\":\n",
+    "        wp *= complex(0, 1) ** amount  \n",
+    "    elif step == \"F\":\n",
+    "        pos += amount * wp\n",
+    "    else:\n",
+    "        wp += amount * compass[step]\n",
+    "\n",
+    "        \n",
+    "print(int(abs(pos.real) + abs(pos.imag)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('input_13.txt', 'r') as f:\n",
+    "    inp = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_txt = '939\\n\\\n",
+    "7,13,x,x,59,x,31,19'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp_txt = test_txt\n",
+    "\n",
+    "start_ts = int(inp_txt.split('\\n')[0])\n",
+    "schedule = [int(ts) for ts in inp_txt.split('\\n')[1].split(',') if ts != 'x']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "295\n"
+     ]
+    }
+   ],
+   "source": [
+    "depart_ts = start_ts ** 2\n",
+    "\n",
+    "for ts in schedule:\n",
+    "    \n",
+    "    if start_ts % ts == 0: \n",
+    "        bus = ts\n",
+    "        break\n",
+    "    else:\n",
+    "        if depart_ts > (start_ts // ts + 1) * ts:\n",
+    "            depart_ts = (start_ts // ts + 1) * ts\n",
+    "            bus = ts\n",
+    "\n",
+    "print((depart_ts - start_ts) * bus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(t + 0) mod 23 = 0, \n",
+      "(t + 13) mod 41 = 0, \n",
+      "(t + 23) mod 509 = 0, \n",
+      "(t + 36) mod 13 = 0, \n",
+      "(t + 37) mod 17 = 0, \n",
+      "(t + 52) mod 29 = 0, \n",
+      "(t + 54) mod 401 = 0, \n",
+      "(t + 60) mod 37 = 0, \n",
+      "(t + 73) mod 19 = 0, \n"
+     ]
+    }
+   ],
+   "source": [
+    "## PART II ##\n",
+    "inp_txt = inp\n",
+    "schedule = [(i, ts) for i, ts in enumerate(inp_txt.split('\\n')[1].split(','))]\n",
+    "\n",
+    "a = ['(t + {}) mod {} = 0, '.format(x[0], x[1]) for x in schedule if x[1] != 'x']\n",
+    "\n",
+    "for eq in a:\n",
+    "    print(eq)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
