added Wolfram Alpha API

--- a/AoC.ipynb
+++ b/AoC.ipynb
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,11 +1169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inp_txt = test_txt\n",
+    "inp_txt = inp\n",
     "\n",
     "start_ts = int(inp_txt.split('\\n')[0])\n",
     "schedule = [int(ts) for ts in inp_txt.split('\\n')[1].split(',') if ts != 'x']"
@@ -1181,14 +1181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "295\n"
+      "2406\n"
      ]
     }
    ],
@@ -1210,22 +1210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(t + 0) mod 23 = 0, \n",
-      "(t + 13) mod 41 = 0, \n",
-      "(t + 23) mod 509 = 0, \n",
-      "(t + 36) mod 13 = 0, \n",
-      "(t + 37) mod 17 = 0, \n",
-      "(t + 52) mod 29 = 0, \n",
-      "(t + 54) mod 401 = 0, \n",
-      "(t + 60) mod 37 = 0, \n",
-      "(t + 73) mod 19 = 0, \n"
+      "Solve (t + 0) mod 23 = 0, (t + 13) mod 41 = 0, (t + 23) mod 509 = 0, (t + 36) mod 13 = 0, (t + 37) mod 17 = 0, (t + 52) mod 29 = 0, (t + 54) mod 401 = 0, (t + 60) mod 37 = 0, (t + 73) mod 19 = 0, \n"
      ]
     }
    ],
@@ -1236,8 +1228,38 @@
     "\n",
     "a = ['(t + {}) mod {} = 0, '.format(x[0], x[1]) for x in schedule if x[1] != 'x']\n",
     "\n",
+    "system_of_eq = 'Solve '\n",
     "for eq in a:\n",
-    "    print(eq)"
+    "    system_of_eq += eq\n",
+    "    \n",
+    "print(system_of_eq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t = 867200349647749 n + 225850756401039, n element Z\n"
+     ]
+    }
+   ],
+   "source": [
+    "import wolframalpha\n",
+    "\n",
+    "appID = 'PGRP2R-7XTK8QGG9U'\n",
+    "client = wolframalpha.Client(appID)\n",
+    "\n",
+    "res = client.query(system_of_eq[:-1])\n",
+    "\n",
+    "for item in res.pods:\n",
+    "    if item.title == 'Integer solution': \n",
+    "        for pod in item.subpods:\n",
+    "            print(pod['img']['@title'])"
    ]
   },
   {
@@ -1264,7 +1286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
